[gd_scene load_steps=9 format=3 uid="uid://bav75o5bblhiw"]

[ext_resource type="Script" uid="uid://dsypl81a3agd6" path="res://Scenes/objectives_all.gd" id="1_6o3xu"]
[ext_resource type="Texture2D" uid="uid://qk2s6be5ldws" path="res://Assets/tojam25_layoutRef1.png" id="2_bcsda"]
[ext_resource type="Texture2D" uid="uid://7vdxv4oi47vf" path="res://Assets/tojam25_emailButton_Off.png" id="3_lcaot"]
[ext_resource type="Texture2D" uid="uid://bln6h5xve55at" path="res://Assets/tojam25_emailButton_On.png" id="4_2aojr"]
[ext_resource type="Texture2D" uid="uid://bmkmw48c1cyco" path="res://Assets/tojam25_emailButton_Over.png" id="5_qddfn"]
[ext_resource type="Texture2D" uid="uid://c7tcb3800ym5s" path="res://Assets/tojam25_profilePic_claire1.png" id="6_e7dvt"]
[ext_resource type="FontFile" uid="uid://6hqn3o6o7h5n" path="res://Fonts/pixelfontmediumbold.ttf" id="7_qedgf"]
[ext_resource type="FontFile" uid="uid://cby3c4hxa2ie0" path="res://Fonts/pixelfontmedium.ttf" id="8_epqjd"]

[node name="Objectives" type="Node2D"]
script = ExtResource("1_6o3xu")

[node name="Tojam25LayoutRef1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_bcsda")
centered = false

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 1773.0
offset_top = 658.0
offset_right = 1901.0
offset_bottom = 786.0
texture_normal = ExtResource("3_lcaot")
texture_pressed = ExtResource("4_2aojr")
texture_hover = ExtResource("5_qddfn")

[node name="ProfilePic" type="Sprite2D" parent="."]
position = Vector2(1517, 724)
texture = ExtResource("6_e7dvt")

[node name="LabelContact" type="Label" parent="."]
z_index = 1
offset_left = 1603.0
offset_top = 650.0
offset_right = 1766.0
offset_bottom = 706.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_qedgf")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LabelSubject" type="Label" parent="."]
z_index = 1
offset_left = 1603.0
offset_top = 709.0
offset_right = 1766.0
offset_bottom = 765.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_epqjd")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LabelGiftIdeasTitle" type="Label" parent="."]
z_index = 1
offset_left = 1457.0
offset_top = 795.0
offset_right = 1902.0
offset_bottom = 851.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_qedgf")
theme_override_font_sizes/font_size = 32
text = "Gift Ideas"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LabelGiftIdeasObjective1" type="Label" parent="."]
z_index = 1
offset_left = 1475.0
offset_top = 850.0
offset_right = 1883.0
offset_bottom = 906.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_epqjd")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LabelGiftIdeasObjective2" type="Label" parent="."]
z_index = 1
offset_left = 1475.0
offset_top = 900.0
offset_right = 1879.0
offset_bottom = 956.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_epqjd")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LabelGiftIdeasObjective3" type="Label" parent="."]
z_index = 1
offset_left = 1475.0
offset_top = 950.0
offset_right = 1879.0
offset_bottom = 1006.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_epqjd")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LabelGiftIdeasObjective4" type="Label" parent="."]
z_index = 1
offset_left = 1475.0
offset_top = 1000.0
offset_right = 1880.0
offset_bottom = 1056.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_epqjd")
theme_override_font_sizes/font_size = 32
text = "doooo"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
